Further examples and cleanup

--- a/src/resources/appTexts_de.properties
+++ b/src/resources/appTexts_de.properties
@@ -1,1 +1,14 @@
 dialogTitle=Willkommen
+ui.firstName=Vorname
+ui.lastName=Name
+ui.street=Strasse
+ui.zip=PLZ
+ui.city=Ort
+menu.file=Datei
+menu.help=Hilfe
+menu.new=Neu
+menu.delete=Löschen
+menu.close=Schließen
+menu.exit=Beenden
+menu.about=Info
+menu.save=Speichern
