--- a/src/resources/appTexts_en.properties
+++ b/src/resources/appTexts_en.properties
@@ -1,1 +1,14 @@
 dialogTitle=Welcome
+ui.firstName=First Name
+ui.lastName=Last Name
+ui.street=Street
+ui.zip=Zip-Code
+ui.city=City
+menu.file=File
+menu.help=Help
+menu.new=New
+menu.delete=Delete
+menu.close=Close
+menu.exit=Exit
+menu.about=About
+menu.save=Save
